--- a/src/styles/partials/general.scss
+++ b/src/styles/partials/general.scss
@@ -48,3 +48,27 @@ img {
 .col {
   text-align: center;
 }
+
+.Thunderstorm {
+}
+.Drizzle {
+}
+.Rain {
+}
+.Snow {
+}
+.Mist,
+.Smoke,
+.Haze,
+.Dust,
+.Fog,
+.Sand,
+.Dust,
+.Ash,
+.Squall,
+.Tornado {
+}
+.Clear {
+}
+.Clouds {
+}
