--- a/src/styles/partials/general.scss
+++ b/src/styles/partials/general.scss
@@ -48,14 +48,26 @@ img {
 .col {
   text-align: center;
 }
-
+.mainWeatherIcon {
+  height: 96px;
+}
+.weekIcon {
+  height: 64px;
+}
+.nightThunderstorm,
 .Thunderstorm {
+  background: url("../img/weather-icon-96/storm.png") center / auto 100%
+    no-repeat;
 }
-.Drizzle {
-}
+.Drizzle,
 .Rain {
+  background: url("../img/weather-icon-96/rain.png") center / auto 100%
+    no-repeat;
 }
+.nightSnow,
 .Snow {
+  background: url("../img/weather-icon-96/snow.png") center / auto 100%
+    no-repeat;
 }
 .Mist,
 .Smoke,
@@ -67,8 +79,36 @@ img {
 .Ash,
 .Squall,
 .Tornado {
+  background: url("../img/weather-icon-96/haze.png") center / auto 100%
+    no-repeat;
 }
 .Clear {
+  background: url("../img/weather-icon-96/sun.png") center / auto 100% no-repeat;
 }
+.nightClouds,
 .Clouds {
+  background: url("../img/weather-icon-96/cloud.png") center / auto 100%
+    no-repeat;
+}
+
+.nightDrizzle,
+.nightRain {
+  background: url("../img/weather-icon-96/rainy-night.png") center / auto 100%
+    no-repeat;
+}
+.nightMist,
+.nightSmoke,
+.nightHaze,
+.nightDust,
+.nightFog,
+.nightSand,
+.nightDust,
+.nightAsh,
+.nightSquall,
+.nightTornado {
+  background: url("../img/weather-icon-96/fog.png") center / auto 100% no-repeat;
+}
+.nightClear {
+  background: url("../img/weather-icon-96/moon-and-stars.png") center / auto
+    100% no-repeat;
 }
