--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,4 @@
-@use "./partials/general.scss";
-@use "./fonts/fonts.scss";
+@import "./partials/general.scss";
+@import "./fonts/fonts.scss";
+@import "./partials/weatherApp.scss";
 @import "~bootstrap/scss/bootstrap";
