--- a/src/styles/partials/general.scss
+++ b/src/styles/partials/general.scss
@@ -1,114 +1,9 @@
-.weather {
-  border: 2px solid rgb(138, 138, 138);
-  padding: 15px;
-  margin: 20px auto;
-  max-width: 600px;
-  border-radius: 10px;
-}
-
-.city {
-  padding: 0;
-}
-.button {
-  text-align: center;
-  padding: auto;
-}
-.picture {
-  width: 50%;
-}
-.picture_temperature,
-.picture_text {
-  text-align: center;
-  color: brown;
-  font-weight: 500;
-}
-.picture_temperature {
-  font-size: 40px;
-}
-
-.picture_text {
-  font-size: 16px;
-  position: relative;
-  top: -18px;
-}
-img {
-  display: block;
-  margin: 0 auto;
-}
-.weather-info {
-  font-size: 14px;
-  color: gray;
-  list-style: none;
-  padding: 0;
-}
-#city-name {
-  font-size: 30px;
-}
-
-.col {
-  text-align: center;
-}
-.mainWeatherIcon {
-  height: 96px;
-}
-.weekIcon {
-  height: 64px;
-}
-.nightThunderstorm,
-.Thunderstorm {
-  background: url("../img/weather-icon-96/storm.png") center / auto 100%
-    no-repeat;
-}
-.Drizzle,
-.Rain {
-  background: url("../img/weather-icon-96/rain.png") center / auto 100%
-    no-repeat;
-}
-.nightSnow,
-.Snow {
-  background: url("../img/weather-icon-96/snow.png") center / auto 100%
-    no-repeat;
-}
-.Mist,
-.Smoke,
-.Haze,
-.Dust,
-.Fog,
-.Sand,
-.Dust,
-.Ash,
-.Squall,
-.Tornado {
-  background: url("../img/weather-icon-96/haze.png") center / auto 100%
-    no-repeat;
-}
-.Clear {
-  background: url("../img/weather-icon-96/sun.png") center / auto 100% no-repeat;
-}
-.nightClouds,
-.Clouds {
-  background: url("../img/weather-icon-96/cloud.png") center / auto 100%
-    no-repeat;
-}
-
-.nightDrizzle,
-.nightRain {
-  background: url("../img/weather-icon-96/rainy-night.png") center / auto 100%
-    no-repeat;
-}
-.nightMist,
-.nightSmoke,
-.nightHaze,
-.nightDust,
-.nightFog,
-.nightSand,
-.nightDust,
-.nightAsh,
-.nightSquall,
-.nightTornado {
-  background: url("../img/weather-icon-96/fog.png") center / auto 100% no-repeat;
-}
-.nightClear {
-  background: url("../img/weather-icon-96/moon-and-stars.png") center / auto
-    100% no-repeat;
-}
+$color-main: #8e6ea0;
+$color-brown: #ab1717;
+$color-offset-brown: #ab1717a4;
+$bp-xxxs: 331px;
+$bp-xxs: 420px;
+$bp-xs: 575px;
+$bp-s: 768px;
+$bp-m: 1024px;
+$bp-l: 1200px;
